--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -47,7 +47,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  id: 
+                  userid: 
                     $ref: "#/components/schemas/UserId"  
         "401":
           $ref: "#/components/responses/UnauthorizedError"
@@ -82,7 +82,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  id: 
+                  username: 
                     $ref: "#/components/schemas/nameUser" 
         "400":
           $ref: "#/components/responses/BadRequest"
@@ -133,12 +133,7 @@ paths:
                     type: integer
                     format: int64
                   ArrayofPhotos:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        idPhoto:
-                          $ref: "#/components/schemas/PhotoId"
+                    $ref: "#/components/schemas/ArrayofPhotos"
             
         "404":
           $ref: "#/components/responses/NotFound"
@@ -168,11 +163,7 @@ paths:
                 type: object
                 properties:
                   ArrayofPhotos:
-                    type: array
-                    minLength: 0
-                    maxLength: 1000 
-                    items:
-                      $ref: "#/components/schemas/PhotoId"
+                    $ref: "#/components/schemas/ArrayofPhotos"
                       
         "401":
           $ref: "#/components/responses/UnauthorizedError"
@@ -545,14 +536,7 @@ components:
       
     
   schemas:
-    User:
-      type: object
-      description: ID and name of the user
-      properties:
-        userid: 
-          $ref: "#/components/schemas/UserId"
-        name:
-          $ref: "#/components/schemas/nameUser"
+   
         
     UserId:
       type: string
@@ -657,16 +641,24 @@ components:
       properties:
         code:
           type: string
+          description: The code of the error
           pattern: "ˆ.*?$"
-          description: code of the error
-        message: 
+          example: "42"
+        message:
           type: string
+          description: The message of the error explaining what is happening
           pattern: "ˆ.*?$"
-          description: message defining the type of error
-        required:
+          example: "Element not found"
+      required:
         - code
         - message
     
+    ArrayofPhotos:
+      type: array
+      minLength: 0
+      maxLength: 1000 
+      items:
+        $ref: "#/components/schemas/PhotoId"
    
   securitySchemes:
     basicAuthorization:
