--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -20,7 +20,7 @@ tags:
   - name: Follow
     description: How to manage followers
 paths:
-  /login:
+  /login/:
     post:
       tags: ["login"]
       summary: Logs in the user
@@ -106,7 +106,7 @@ paths:
           $ref: "#/components/responses/UnauthorizedError"
 
   
-  /users/{userid}/profile:
+  /users/{userid}/profile/:
     parameters:
     -  $ref: "#/components/parameters/userid"
     get:
@@ -143,7 +143,7 @@ paths:
 
 
 
-  /user/{userid}/mainstream:
+  /user/{userid}/mainstream/:
     parameters:
     - $ref: "#/components/parameters/userid"
     get:
@@ -298,7 +298,7 @@ paths:
 
 
   
-  /users/{userid}/photos:
+  /users/{userid}/photos/:
     parameters:
     -  $ref: "#/components/parameters/userid"
     post:
